--- a/angular-web-app/src/app/components/_pages/contact/contact.component.html
+++ b/angular-web-app/src/app/components/_pages/contact/contact.component.html
@@ -19,6 +19,18 @@
           <div class="col-md-6">
             <app-contact-card></app-contact-card>
           </div>
+          <div class="col-md-4 ml-auto">
+            <app-info-card
+            [title]="'Find us here'"
+            [text]="'Oeverlanden 60, 9606RR Kropswolde'"
+            [icon]="'pin_drop'"
+            ></app-info-card>
+            <app-info-card
+            [title]="'Give us a call'"
+            [text]="'06 12345678'"
+            [icon]="'phone'"
+          ></app-info-card>
+          </div>
         </div>
   
       </div>
