--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -192,6 +192,13 @@ hr.divider {
   height: 3rem !important;
   width: 3rem !important;
 }
+
+.icon-medium {
+  font-size: 2.25rem !important;
+  height: 2.25rem !important;
+  width: 2.25rem !important;
+}
+
 .icon-gradient {
   background-clip: text;
   -webkit-background-clip: text;
