--- a/angular-web-app/src/app/components/gallery/gallery.component.html
+++ b/angular-web-app/src/app/components/gallery/gallery.component.html
@@ -27,7 +27,7 @@
 <div class="row pt-4">
   <div
     *ngFor="let painting of filteredPaintings"
-    class="col-lg-4 col-md-6 col-sm-12 p-0 p-2"
+    class="col-lg-4 col-md-6 col-sm-12 p-0 p-2 flex-shrink-1"
     [@scaleInOut]
   >
     <div class="portfolio-box">
