--- a/angular-web-app/src/app/app.component.html
+++ b/angular-web-app/src/app/app.component.html
@@ -1,7 +1,15 @@
+<!-- NavBar -->
+<app-nav></app-nav>
 
 <!-- Site content -->
-<div id="site-content" class="theme-light" [@routeAnimations]="prepareRoute(outlet)">
+<div
+  id="site-content"
+  class="theme-light"
+  [@routeAnimations]="prepareRoute(outlet)"
+>
   <!-- Router outlet -->
   <router-outlet #outlet="outlet"></router-outlet>
 </div>
 
+<!-- Footer -->
+<app-footer></app-footer>
