--- a/angular-web-app/src/app/components/latest/latest.component.html
+++ b/angular-web-app/src/app/components/latest/latest.component.html
@@ -4,62 +4,7 @@
   [dataSource]="paintings"
 >
   <div *nguCarouselDef="let painting" class="item p-3">
-    <div class="latest-box">
-      <img
-        class="latest-box-img mat-elevation-z4"
-        src="{{ painting.thumbnail }}"
-        alt=""
-      />
-      <div class="latest-box-caption p-3">
-        <div class="latest-project-name">
-          <h2 class="my-0">{{ painting.title }}</h2>
-          <hr class="divider mt-2" />
-        </div>
-        <div class="latest-project-category">
-          <button
-            mat-fab
-            color="accent"
-            class="mx-2"
-            aria-label="Show image"
-            (click)="openImage(content)"
-          >
-            <mat-icon>search</mat-icon>
-          </button>
-          <button
-            mat-fab
-            color="accent"
-            class="mx-2"
-            aria-label="Show details"
-            (click)="goToPaintingDetails(painting.id)"
-          >
-            <mat-icon>more_horiz</mat-icon>
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal -->
-    <ng-template #content let-modal>
-      <div class="modal-header">
-        <div></div>
-        <button mat-raised-button color="accent" (click)="modal.close()">
-          <mat-icon>close</mat-icon>
-        </button>
-      </div>
-
-      <div class="modal-body">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <div class="d-flex align-items-center justify-content-center">
-                <img class="img-modal" src="{{ painting.thumbnail }}" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal-footer"></div>
-    </ng-template>
+    <app-painting-card [painting]="painting"></app-painting-card>
   </div>
 
   <button
