Updated home and portfolio

--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -70,7 +70,7 @@
   </section>
 
   <!-- CTA -->
-  <section class="page-section bg-light">
+  <section class="page-section bg-material-light">
     <div class="container">
       <div class="col-12">
         <app-call-to-action></app-call-to-action>
