--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -203,6 +203,16 @@ hr.divider {
   }
 }
 
+.bg-material-dark {
+  background-image: url("./assets/img/material-bg.jpg");
+}
+.bg-material-light {
+  background-image: url("./assets/img/material-bg-light.jpg");
+}
+.bg-material-primary {
+  background-image: url("./assets/img/material-bg-primary.jpg");
+}
+
 /*************************************/
 /**              Icons              **/
 /*************************************/
