--- a/angular-web-app/src/app/components/gallery/gallery.component.html
+++ b/angular-web-app/src/app/components/gallery/gallery.component.html
@@ -7,7 +7,11 @@
         mat-raised-button
         color="accent"
         class="mx-2 rounded-pill filter-button"
-        [class.active]="activeFilters.categories.length == 0"
+        [class.active]="
+          activeFilters.categories.length == 0 &&
+          activeFilters.paints.length == 0 &&
+          activeFilters.states.length == 0
+        "
         (click)="resetFilters()"
       >
         All
@@ -67,6 +71,7 @@
     [attr.data-paint]="painting.paint"
     [attr.data-status]="painting.status"
     [painting]="painting"
+    [fixedHeight]="false"
   ></app-painting-card>
   <div #shuffleSizer class="sizer-element col-1"></div>
 </div>
