--- a/angular-web-app/src/app/components/painting-card/painting-card.component.scss
+++ b/angular-web-app/src/app/components/painting-card/painting-card.component.scss
@@ -5,6 +5,10 @@
   width: 100%;
 }
 
+.painting-card-auto-height {
+  height: auto !important;
+}
+
 .painting-card-img {
   width: 100%;
   height: 100%;
