--- a/angular-web-app/src/app/components/call-to-action/call-to-action.component.html
+++ b/angular-web-app/src/app/components/call-to-action/call-to-action.component.html
@@ -2,5 +2,5 @@
 <div class="text-center">
   <p class="subtitle txt-secondary text-uppercase">Some very cool one liner</p>
   <h2 class="mb-5 txt-primary">{{ typewriterDisplay }}</h2>
-  <button mat-raised-button color="accent">Take me there!</button>
+  <button mat-raised-button color="accent" class="rounded-pill">Take me there!</button>
 </div>
