--- a/angular-web-app/src/app/components/gallery/gallery.component.html
+++ b/angular-web-app/src/app/components/gallery/gallery.component.html
@@ -10,7 +10,7 @@
         <!-- Filters -->
         <div class="row">
           <!-- Categories -->
-          <div class="col-12">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="d-flex align-items-center justify-content-center p-2">
               <button
                 mat-raised-button
@@ -41,7 +41,7 @@
           </div>
 
           <!-- Paints -->
-          <div class="col-12">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="d-flex align-items-center justify-content-center p-2">
               <button
                 mat-raised-button
@@ -57,7 +57,7 @@
           </div>
 
           <!-- States -->
-          <div class="col-12">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="d-flex align-items-center justify-content-center p-2">
               <button
                 mat-raised-button
